--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
+    <head>
+        <meta charset="UTF-8">
      
-    <title>Agenda</title>
-</head>
-<body>
-    <div>
-        <h1>Qualquer</h1>
-    </div>
-</body>
+        <title>Agenda</title>
+        <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
+    </head>
+
+    <body>
+        <div>
+            <h1>Qualquer</h1>
+        </div>
+    </body>
 </html>
