Configurando antigos e novos Recursos
Corrigindo a variavel first_name do banco de dados, antes 'fist_name' depois 'first_name';
Adicionando o recurso de inserir imagem para os contatos;

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -10,6 +10,7 @@
     <body>
         <div>
             <h1>Qualquer</h1>
+            <a class="admin" href="http://127.0.0.1:8000/admin/">Admin</a>
         </div>
     </body>
 </html>
