--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,16 +1,18 @@
 {% load static %}<!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-     
-        <title>Agenda</title>
-        <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content='width=device-width, initial-scale=1.0'>
+    <title>Agenda</title>
+    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
+</head>
+<body>
+    <div>
+        {% include './partials/menu.html' %}
 
-    <body>
-        <div>
-            <h1>Qualquer</h1>
-            <a class="admin" href="http://127.0.0.1:8000/admin/">Admin</a>
-        </div>
-    </body>
+        <main class="content">
+            {% block content %}{% endblock content %}
+        </main>
+    </div>
+</body>
 </html>
