--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,10 +1,7 @@
 {% load static %}<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content='width=device-width, initial-scale=1.0'>
-    <title>Agenda</title>
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
+    {% include './partials/hearder.html' %}
 </head>
 <body>
     <div>
@@ -12,6 +9,7 @@
 
         <main class="content">
             {% block content %}{% endblock content %}
+            {% include './partials/pagination.html' %}
         </main>
     </div>
 </body>
