Novas funcionalidades e Refatoração de código.
Incluido mensagens de avisos;
Alteração visual de mensagens de aviso;
Configurado possibilidade de anexar imagem de contato para opcional;
Criado página de login para usuários cadastrados;
Adicionado na página de registro nome, sobrenome e email. Com validação de
email e usuários iguais;
Refatoração do formulário para arquivos create, login e register.

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -6,6 +6,7 @@
 <body>
     <div>
         {% include './partials/menu.html' %}
+        {% include './partials/messages.html' %}
 
         <main class="content">
             {% block content %}{% endblock content %}
